# distributed-ai-demo

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  Dockerfile.worker  manage.py  package-lock.json  package.json  requirements.txt
backend/backend/: celery.py  settings.py  urls.py
backend/config/: __init__.py  celery.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  dev.py  prod.py  staging.py
backend/core/: admin.py  kafka_consumer.py  kafka_producer.py  models.py  tasks.py  tests.py  urls.py  views.py
backend/core/management/commands/: run_kafka_consumer.py
backend/core/tests/: test_tasks.py
backend/health/: tests.py  urls.py  views.py
backend/scripts/: check_settings.py
backend/src/: app.js  worker.js
backend/src/api/: reviews.js
backend/src/llm/: analyzeReview.js
backend/src/models/: Review.js
backend/src/queue/: reviewQueue.js
backend/src/worker/: reviewWorker.js
docs/: architecture.md  ci_environment_configurations_and_build_commands.md  deployment.md  env_configuration_guide.md  frontend_backend_integration_guide.md  full_stack_run_guide_mongo_db_node_worker_react.md  implemented_beyond_requirements.md  production_setup_guide.md  run_commands.md  worker-architecture.md
fixtures/: sample_reviews.json
frontend/: package-lock.json
frontend/src/: App.js
hooks/: run-tests.sh
infra/docker/: Dockerfile  docker-compose.yml
shared/config/: pagination.js
